--- a/angular.json
+++ b/angular.json
@@ -21,13 +21,13 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              
+                "src/favicon.ico" ,
+                "src/assets"
+             
             ],
             "styles": [
-              "src/styles.css"
+             "src/styles.css"
             ],
             "scripts": []
           },
@@ -85,6 +85,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
